@@ -12,6 +12,7 @@
 10. New slider styles - plain rotated, and round rotated.
 11. Fix crash if QTC_STYLE is set, but is empty.
 12. Alter the way the light part of etchibng is drawn - should help with darker color schemes.
+13. Draw border around filled progress.
 
 0.59.7
 ------
